Start using express

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,14 @@
       <div id="my_dataviz"></div>
     </div>
     <div id="tab3" class="tab-pane fade">
-      <h3>Content for Tab 3</h3>
-      <p>This is the content for Tab 3.</p>
+      <h2>Upload</h2>
+
+    <form method="post"
+          enctype="multipart/form-data"
+          action="http://localhost:8000/upload">
+      <input type="file" name="myimage" />
+      <input type="submit" name="submit" value="submit"/>
+      </form> 
     </div>
   </div>
 </div>
@@ -129,5 +135,53 @@
       });
     });
   </script></head>
+<script>
+
+    function uploadFile() {
+      const fileInput = document.getElementById('fileInput');
+      const file = fileInput.files[0];
+
+      const fileSize = file.size;
+      const chunkSize = 1024 * 1024; // 1MB chunk size (adjust as needed)
+      let offset = 0;
+
+      function readChunk() {
+        const reader = new FileReader();
+        const blob = file.slice(offset, offset + chunkSize);
+
+        reader.onload = function (e) {
+          if (e.target.readyState === FileReader.DONE) {
+            const chunkData = e.target.result;
+
+            // Send the chunk data to the server using AJAX
+            uploadChunk(chunkData, offset, fileSize);
+
+            offset += chunkData.byteLength;
+
+            if (offset < fileSize) {
+              // Continue reading the next chunk
+              readChunk();
+            } else {
+              // All chunks uploaded
+              document.getElementById('uploadStatus').textContent = 'File uploaded successfully.';
+            }
+          }
+        };
+
+        reader.readAsArrayBuffer(blob);
+      }
+
+      readChunk();
+    }
+
+    function uploadChunk(chunkData, offset, fileSize) {
+      const xhr = new XMLHttpRequest();
+      xhr.open('POST', '/upload', true);
+      xhr.setRequestHeader('Content-Type', 'application/octet-stream');
+      xhr.setRequestHeader('X-Chunk-Offset', offset);
+      xhr.setRequestHeader('X-File-Size', fileSize);
+      xhr.send(chunkData);
+    }
+  </script>
 </body>
 </html>
