Include subsecond time

--- a/public/index.html
+++ b/public/index.html
@@ -87,30 +87,22 @@
               .attr("transform",
                     "translate(" + margin.left + "," + margin.top + ")");
 
-          //Read the data
           d3.csv("http://localhost:8000/peer-info",
-            // When reading the csv, I must format variables:
             function(d){
-              // console.log(d.date)
-              // console.log(d3.timeParse("%H:%M:%S")(d.date));
-              return { date : d3.timeParse("%H:%M:%S")(d.date), value : d.value }
+              return { date : d3.timeParse("%H:%M:%S.%L")(d.date), value : d.value }
             },
-            // Now I can use this dataset:
             function(data) {
-              // Add X axis --> it is a date format
               var x = d3.scaleTime()
                 .domain(d3.extent(data, function(d) { return d.date; }))
                 .range([ 0, width ]);
               svg.append("g")
                 .attr("transform", "translate(0," + height + ")")
                 .call(d3.axisBottom(x));
-              // Add Y axis
               var y = d3.scaleLinear()
                 .domain( [0, 40])
                 .range([ height, 0 ]);
               svg.append("g")
                 .call(d3.axisLeft(y));
-              // Add the line
               svg.append("path")
                 .datum(data)
                 .attr("fill", "none")
@@ -120,7 +112,6 @@
                   .x(function(d) { return x(d.date) })
                   .y(function(d) { return y(d.value) })
                   )
-              // Add the points
               svg
                 .append("g")
                 .selectAll("dot")
