--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,11 @@
       <h4>Received block announcements, graph for block height</h4>
       <div id="block_announcements"></div>
 
+      <h4>Block import times, histogram</h4>
+      <div id="block_import"></div>
       <h4>Received finality notifications, graph for block height</h4>
       <div id="finality_notifications"></div>
 
-      <h4>Block import times, histogram</h4>
-      <div id="block_import"></div>
     </div>
     <div id="tab3" class="tab-pane fade">
       <h3>Peer information</h3>
@@ -214,7 +214,69 @@ d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/da
                   .attr("r", 5)
                   .attr("fill", "#69b3a2")
           });
+var margin = {top: 10, right: 30, bottom: 30, left: 40},
+    width = 1000 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
+
+// append the svg object to the body of the page
+var svg3 = d3.select("#block_import")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
+
+// get the data
+
+d3.csv("http://localhost:8000/block-imports", function(data) {
+
+console.log("received data", data);
+
+  // X axis: scale and draw:
+  var x = d3.scaleLinear()
+      .domain([0, 8000])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.price })
+      .range([0, width]);
+  svg3.append("g")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
+
+  // set the parameters for the histogram
+  var histogram = d3.histogram()
+      .value(function(d) { return d.duration; })   // I need to give the vector of value
+      .domain(x.domain())  // then the domain of the graphic
+      .thresholds(x.ticks(70)); // then the numbers of bins
+
+  // And apply this function to data to get the bins
+  var bins = histogram(data);
+
+  // Y axis: scale and draw:
+  // var y = d3.scaleLinear()
+  //     .range([height, 0]);
+  //     y.domain([0, d3.max(bins, function(d) { return d.length; })]);   // d3.hist has to be called before the Y axis obviously
+  var y = d3.scaleLog()
+      .range([0, height])
+      .domain([1, 100000000000000]);
+      // y.domain([0, d3.max(bins, function(d) { return d.length; })]);   // d3.hist has to be called before the Y axis obviously
+  svg3.append("g")
+      .call(d3.axisLeft(y));
+
+  // append the bar rectangles to the svg element
+  svg3.selectAll("rect")
+      .data(bins)
+      .enter()
+      .append("rect")
+        .attr("x", 1)
+        .attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.length) + ")"; })
+        .attr("width", function(d) { return x(d.x1) - x(d.x0) - 1; })
+        .attr("height", function(d) { return height - y(d.length); })
+        .style("fill", "#69b3a2")
+
+});
+      
       });
+
+
     });
     $(document).ready(function() {
       $('#tab3-link').click(function() {
