--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       <h4>Received block announcements, graph for block height</h4>
       <div id="block_announcements"></div>
 
-      <h4>Block import times, histogram</h4>
+      <h4>Block import times, invereted</h4>
       <div id="block_import"></div>
       <h4>Received finality notifications, graph for block height</h4>
       <div id="finality_notifications"></div>
@@ -78,44 +78,36 @@ var svg = d3.select("#best_and_finalized")
           "translate(" + margin.left + "," + margin.top + ")");
 
 //Read the data
-d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_connectedscatter.csv", function(data) {
+d3.csv("http://localhost:8000/best-and-finalized",
 
-    // List of groups (here I have one group per column)
-    var allGroup = ["valueA", "valueB", "valueC"]
-
-    // Reformat the data: we need an array of arrays of {x, y} tuples
-    var dataReady = allGroup.map( function(grpName) { // .map allows to do something for each element of the list
+function(data) {
+    var allGroup = ["best", "finalized"]
+    var dataReady = allGroup.map( function(grpName) {
       return {
         name: grpName,
         values: data.map(function(d) {
-          return {time: d.time, value: +d[grpName]};
+          return {time: d3.timeParse("%H:%M:%S.%L")(d.time), value: +d[grpName]};
         })
       };
     });
-    // I strongly advise to have a look to dataReady with
-    console.log(dataReady)
 
-    // A color scale: one color for each group
     var myColor = d3.scaleOrdinal()
       .domain(allGroup)
       .range(d3.schemeSet2);
 
-    // Add X axis --> it is a date format
-    var x = d3.scaleLinear()
-      .domain([0,10])
-      .range([ 0, width ]);
+    var x = d3.scaleTime()
+      .domain(d3.extent(data, function(d) { return d3.timeParse("%H:%M:%S.%L")(d.time); }))
+      .range([0, width]);
     svg.append("g")
       .attr("transform", "translate(0," + height + ")")
       .call(d3.axisBottom(x));
 
-    // Add Y axis
     var y = d3.scaleLinear()
-      .domain( [0,20])
-      .range([ height, 0 ]);
+      .domain([1040000,1070000])
+      .range([height, 0]);
     svg.append("g")
       .call(d3.axisLeft(y));
 
-    // Add the lines
     var line = d3.line()
       .x(function(d) { return x(+d.time) })
       .y(function(d) { return y(+d.value) })
@@ -128,37 +120,35 @@ d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/da
         .style("stroke-width", 4)
         .style("fill", "none")
 
-    // Add the points
     svg
-      // First we need to enter in a group
       .selectAll("myDots")
       .data(dataReady)
       .enter()
         .append('g')
         .style("fill", function(d){ return myColor(d.name) })
-      // Second we need to enter in the 'values' part of this group
       .selectAll("myPoints")
       .data(function(d){ return d.values })
       .enter()
       .append("circle")
-        .attr("cx", function(d) { return x(d.time) } )
+        .attr("cx", function(d) {
+            return x(d3.timeParse("%H:%M:%S.%L")(d.time))
+        })
         .attr("cy", function(d) { return y(d.value) } )
         .attr("r", 5)
         .attr("stroke", "white")
 
-    // Add a legend at the end of each line
     svg
       .selectAll("myLabels")
       .data(dataReady)
       .enter()
         .append('g')
         .append("text")
-          .datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; }) // keep only the last value of each time series
-          .attr("transform", function(d) { return "translate(" + x(d.value.time) + "," + y(d.value.value) + ")"; }) // Put the text at the position of the last point
-          .attr("x", 12) // shift the text a bit more right
+          .datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; })
+          .attr("transform", function(d) { return "translate(" + x(d.value.time) + "," + y(d.value.value) + ")"; })
+          .attr("x", 12)
           .text(function(d) { return d.name; })
           .style("fill", function(d){ return myColor(d.name) })
-          .style("font-size", 15)
+          .style("font-size", 10)
 
 });
 
@@ -214,6 +204,8 @@ d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/da
                   .attr("r", 5)
                   .attr("fill", "#69b3a2")
           });
+
+          
 var margin = {top: 10, right: 30, bottom: 30, left: 40},
     width = 1000 - margin.left - margin.right,
     height = 600 - margin.top - margin.bottom;
@@ -250,14 +242,12 @@ console.log("received data", data);
   // And apply this function to data to get the bins
   var bins = histogram(data);
 
-  // Y axis: scale and draw:
   // var y = d3.scaleLinear()
   //     .range([height, 0]);
   //     y.domain([0, d3.max(bins, function(d) { return d.length; })]);   // d3.hist has to be called before the Y axis obviously
   var y = d3.scaleLog()
       .range([0, height])
-      .domain([1, 100000000000000]);
-      // y.domain([0, d3.max(bins, function(d) { return d.length; })]);   // d3.hist has to be called before the Y axis obviously
+      .domain([1, 100000]);
   svg3.append("g")
       .call(d3.axisLeft(y));
 
