--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
           
 
 // set the dimensions and margins of the graph
-var margin = {top: 10, right: 100, bottom: 30, left: 30},
-    width = 800 - margin.left - margin.right,
+var margin = { top: 10, right: 100, bottom: 30, left: 80 },
+    width = 1000 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
@@ -107,7 +107,7 @@ function(data) {
       .range([0, width]);
     svg.append("g")
       .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x));
+      .call(d3.axisBottom(x).tickFormat(d3.timeFormat("%H:%M:%S")));
 
     var y = d3.scaleLinear()
       .domain([1040000,1070000])
@@ -124,7 +124,7 @@ function(data) {
       .append("path")
         .attr("d", function(d){ return line(d.values) } )
         .attr("stroke", function(d){ return myColor(d.name) })
-        .style("stroke-width", 4)
+        .style("stroke-width", 2)
         .style("fill", "none")
 
     svg
@@ -150,9 +150,16 @@ function(data) {
       .enter()
         .append('g')
         .append("text")
-          .datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; })
+          .datum(function(d) { return { name: d.name, value: d.values[d.values.length - 1]}; })
           .attr("transform", function(d) { return "translate(" + x(d.value.time) + "," + y(d.value.value) + ")"; })
-          .attr("x", 12)
+          .attr("x", 20)
+          .attr("y", function(d) {
+              if (d.name == "best") {
+                return 30
+              } else {
+                return 50
+              }
+          })
           .text(function(d) { return d.name; })
           .style("fill", function(d){ return myColor(d.name) })
           .style("font-size", 10)
@@ -185,7 +192,7 @@ function(data) {
                 .range([ 0, width ]);
               svg2.append("g")
                 .attr("transform", "translate(0," + height + ")")
-                .call(d3.axisBottom(x));
+                .call(d3.axisBottom(x).tickFormat(d3.timeFormat("%H:%M:%S")));
               var y = d3.scaleLinear()
                 .domain([17954730, 17954764])
                 .range([height, 0]);
