--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,8 @@
     </div>
     <div id="tab3" class="tab-pane fade">
       <h3>Network information</h3>
+      <span class="badge badge-warning" role="alert" >Low peer count</span>
+      <br><br>
 
       <h4>Number of peers</h4>
       <div id="peer_count"></div>
@@ -58,6 +60,9 @@
 
       <h4>Bytes received</h4>
       <div id="bytes_received"></div>
+
+      <h4>Connectivity</h4>
+      <div id="connectivity"></div>
 
     </div>
   </div>
@@ -129,7 +134,7 @@ function(data) {
       .call(d3.axisBottom(x).tickFormat(d3.timeFormat("%H:%M:%S")));
 
     var y = d3.scaleLinear()
-      .domain([low * 0.9, high * 1.10])
+      .domain([low * 0.999, high * 1.011])
       .range([height, 0]);
     svg.append("g")
       .call(d3.axisLeft(y));
@@ -307,6 +312,7 @@ d3.csv("http://localhost:8000/block-imports", function(data) {
         $('#peer_count').empty();
         $('#bytes_sent').empty();
         $('#bytes_received').empty();
+        $('#connectivity').empty();
           // set the dimensions and margins of the graph
           var margin = { top: 30, right: 30, bottom: 0, left: 60 },
               width = 1000 - margin.left - margin.right,
@@ -524,7 +530,7 @@ console.log("process data");
       .call(d3.axisBottom(x).tickFormat(d3.timeFormat("%H:%M:%S")));
 
     var y = d3.scaleLinear()
-      .domain([low * 0.9, high * 1.10])
+      .domain([low * 0.98, high * 1.02])
       .range([height, 0]);
     svg3.append("g")
       .call(d3.axisLeft(y));
@@ -580,6 +586,94 @@ console.log("process data");
           .style("font-size", 10)
 
 });
+
+var width_4 = 900
+    height_4 = 600
+    margin_4 = 0
+
+// The radius of the pieplot is half the width or half the height (smallest one). I subtract a bit of margin.
+var radius = Math.min(width_4, height_4) / 2 - margin_4
+
+// append the svg object to the div called 'my_dataviz'
+var svg4 = d3.select("#connectivity")
+  .append("svg")
+    .attr("width", width_4)
+    .attr("height", height_4)
+  .append("g")
+    .attr("transform", "translate(" + width_4 / 2 + "," + height_4 / 2 + ")");
+
+// Create dummy data
+// var data = {a: 9, b: 20, c:30, d:8, e:12, f:3, g:7, h:14}
+var data = { failed_to_reach: 202, disconnected: 18, unique_dials: 336, unique_connections: 135 };
+
+// set the color scale
+var color = d3.scaleOrdinal()
+  .domain(["failed_to_reach", "disconnected", "unique_dials", "unique_conns" ])
+  .range(d3.schemeDark2);
+
+// Compute the position of each group on the pie:
+var pie = d3.pie()
+  .sort(null) // Do not sort group by size
+  .value(function(d) {return d.value; })
+var data_ready = pie(d3.entries(data))
+
+// The arc generator
+var arc = d3.arc()
+  .innerRadius(radius * 0.5)         // This is the size of the donut hole
+  .outerRadius(radius * 0.8)
+
+// Another arc that won't be drawn. Just for labels positioning
+var outerArc = d3.arc()
+  .innerRadius(radius * 0.9)
+  .outerRadius(radius * 0.9)
+
+// Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
+svg4
+  .selectAll('allSlices')
+  .data(data_ready)
+  .enter()
+  .append('path')
+  .attr('d', arc)
+  .attr('fill', function(d){ return(color(d.data.key)) })
+  .attr("stroke", "white")
+  .style("stroke-width", "2px")
+  .style("opacity", 0.7)
+
+// Add the polylines between chart and labels:
+svg4
+  .selectAll('allPolylines')
+  .data(data_ready)
+  .enter()
+  .append('polyline')
+    .attr("stroke", "black")
+    .style("fill", "none")
+    .attr("stroke-width", 1)
+    .attr('points', function(d) {
+      var posA = arc.centroid(d) // line insertion in the slice
+      var posB = outerArc.centroid(d) // line break: we use the other arc generator that has been built only for that
+      var posC = outerArc.centroid(d); // Label position = almost the same as posB
+      var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2 // we need the angle to see if the X position will be at the extreme right or extreme left
+      posC[0] = radius * 0.89 * (midangle < Math.PI ? 1 : -1); // multiply by 1 or -1 to put it on the right or on the left
+      return [posA, posB, posC]
+    })
+
+// Add the polylines between chart and labels:
+svg4
+  .selectAll('allLabels')
+  .data(data_ready)
+  .enter()
+  .append('text')
+    .text( function(d) { console.log(d.data.key) ; return d.data.key.replace(/_/g, ' ') + ": " + d.data.value} )
+    .attr('transform', function(d) {
+        var pos = outerArc.centroid(d);
+        var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
+        pos[0] = radius * 0.90 * (midangle < Math.PI ? 1 : -1);
+        return 'translate(' + pos + ')';
+    })
+    .style('text-anchor', function(d) {
+        var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
+        return (midangle < Math.PI ? 'start' : 'end')
+    })
 
           
       });
