Visualize sent/received messages

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,12 @@
       <h4>Bytes received</h4>
       <div id="bytes_received"></div>
 
+      <h4>Messages sent</h4>
+      <div id="messages_sent"></div>
+
+      <h4>Messages received</h4>
+      <div id="messages_received"></div>
+
       <h4>Connectivity</h4>
       <div id="connectivity"></div>
 
