--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
   <title>Bootstrap Tabs Example</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"></head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container mt-4">
 
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#tab1">Upload log file</a>
+      <a class="nav-link active" data-bs-toggle="tab" href="#tab1">Upload log file</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab2" id="tab2-link">General information</a>
+      <a class="nav-link" data-bs-toggle="tab" href="#tab2" id="tab2-link">General information</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab3" id="tab3-link">Network information</a>
+      <a class="nav-link" data-bs-toggle="tab" href="#tab3" id="tab3-link">Network information</a>
     </li>
   </ul>
 
@@ -27,9 +29,9 @@
     <div id="tab2" class="tab-pane fade">
       <h3>General information</h3>
 
-      <span class="badge badge-danger" role="alert" >Best block lagging</span>
-      <span class="badge badge-danger" role="alert" >Finality lagging</span>
-      <span class="badge badge-warning" role="alert" >Slow block import</span>
+      <span class="badge text-bg-danger">Best block lagging</span>
+      <span class="badge text-bg-danger">Finality lagging</span>
+      <span class="badge text-bg-warning">Slow block import</span>
 
       <hr>
       <h4>Best and finalized blocks</p>
@@ -46,7 +48,7 @@
     </div>
     <div id="tab3" class="tab-pane fade">
       <h3>Network information</h3>
-      <span class="badge badge-warning" role="alert" >Low peer count</span>
+      <span class="badge text-bg-warning">Low peer count</span>
 
       <hr>
       <h4>Number of peers</h4>
@@ -93,10 +95,6 @@
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="http://localhost:8000/general.js"></script>
