Display info notification if no connectivity events were read

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,9 @@
 
       <hr>
       <h4>Connectivity</h4>
+      <div class="alert alert-info" role="alert" id="connectivity_info" style="display: none">
+        Did not read any connectivity events.
+      </div>
       <div id="connectivity">
       </div>
 
@@ -71,6 +74,9 @@
 
     <div id="tab4" class="tab-pane fade">
       <h3>Data usage</h3>
+      <span class="badge text-bg-warning">High message usage</span>
+      <span class="badge text-bg-warning">High byte usage</span>
+
       <hr>
       <h4>Bytes sent</h4>
       <div class="alert alert-info" role="alert" id="bytes_sent_info" style="display: none">
