Gather information about the connection roles

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <a class="nav-link active" data-bs-toggle="tab" href="#tab1">Upload log file</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="tab" href="#tab2" id="tab2-link">General information</a>
+      <a class="nav-link" data-bs-toggle="tab" href="#tab2" id="tab2-link">General</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Network</a>
@@ -71,6 +71,14 @@
         Did not read any connectivity events.
       </div>
       <div id="connectivity">
+      </div>
+
+      <hr>
+      <h4>Connection roles</h4>
+      <div class="alert alert-info" role="alert" id="role_info" style="display: none">
+        Did not read any connection roles.
+      </div>
+      <div id="roles">
       </div>
 
     </div>
