Keep track of address type

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,14 @@
       <div id="roles">
       </div>
 
+      <hr>
+      <h4>Address type of connections</h4>
+      <div class="alert alert-info" role="alert" id="address_info" style="display: none">
+        Did not read any addresses.
+      </div>
+      <div id="addresses">
+      </div>
+
     </div>
 
     <div id="tab4" class="tab-pane fade">
