--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Tabs Example</title>
+  <title>Trace analyzer</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"></head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <style>
+      #connectivity_container {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-gap: 0px;
+      }
+</style>
 </head>
 <body>
 <div class="container mt-4">
@@ -48,7 +55,7 @@
       <hr>
       <h4>Received block announcements</h4>
       <div class="alert alert-info" role="alert" id="block_announcement_info" style="display: none">
-        Did not receive any block announcements.
+        Did not receive block announcements.
       </div>
       <div id="block_announcements"></div>
 
@@ -66,27 +73,14 @@
       <div id="peer_count"></div>
 
       <hr>
-      <h4>Connectivity</h4>
+      <h4>Connection information</h4>
       <div class="alert alert-info" role="alert" id="connectivity_info" style="display: none">
-        Did not read any connectivity events.
+        Did not read connectivity events.
       </div>
-      <div id="connectivity">
-      </div>
-
-      <hr>
-      <h4>Connection roles</h4>
-      <div class="alert alert-info" role="alert" id="role_info" style="display: none">
-        Did not read any connection roles.
-      </div>
-      <div id="roles">
-      </div>
-
-      <hr>
-      <h4>Address type of connections</h4>
-      <div class="alert alert-info" role="alert" id="address_info" style="display: none">
-        Did not read any addresses.
-      </div>
-      <div id="addresses">
+      <div id="connectivity_container">
+        <div id="connectivity"></div>
+        <div id="addresses"></div>
+        <div id="roles"></div>
       </div>
 
     </div>
@@ -99,7 +93,7 @@
       <hr>
       <h4>Bytes sent</h4>
       <div class="alert alert-info" role="alert" id="bytes_sent_info" style="display: none">
-        Did not send any bytes.
+        Did not send bytes.
       </div>
       <div id="bytes_sent">
       </div>
@@ -107,7 +101,7 @@
       <hr>
       <h4>Bytes received</h4>
       <div class="alert alert-info" role="alert" id="bytes_received_info" style="display: none">
-        Did not receive any bytes.
+        Did not receive bytes.
       </div>
       <div id="bytes_received">
       </div>
@@ -115,7 +109,7 @@
       <hr>
       <h4>Messages sent</h4>
       <div class="alert alert-info" role="alert" id="messages_sent_info" style="display: none">
-        Did not send any messages.
+        Did not send messages.
       </div>
       <div id="messages_sent">
       </div>
@@ -123,7 +117,7 @@
       <hr>
       <h4>Messages received</h4>
       <div class="alert alert-info" role="alert" id="messages_received_info" style="display: none">
-        Did not receive any messages.
+        Did not receive messages.
       </div>
       <div id="messages_received">
       </div>
