Visualize success/failure of substreams

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,13 @@
       <div id="peer_count"></div>
 
       <hr>
+      <h4>Substream open results</h4>
+      <div class="alert alert-info" role="alert" id="connectivity_info" style="display: none">
+        Did not read substream events.
+      </div>
+      <div id="substream_open_results"></div>
+
+      <hr>
       <h4>Connection information</h4>
       <div class="alert alert-info" role="alert" id="connectivity_info" style="display: none">
         Did not read connectivity events.
