--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,7 @@
 
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="http://localhost:8000/utils.js"></script>
 <script src="http://localhost:8000/general.js"></script>
 <script src="http://localhost:8000/network.js"></script>
 </body>
