Add sections for syncing, GRANDPA and transactions

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
         <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab3" id="tab3-link">Connectivity</a></li>
         <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab4" id="tab4-link">Data usage</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Syncing</a></li>
-        <li><a class="dropdown-item" href="#">GRANDPA</a></li>
-        <li><a class="dropdown-item" href="#">Transactions</a></li>
+        <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab5" id="tab5-link">Syncing</a></li>
+        <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab6" id="tab6-link" href="#">GRANDPA</a></li>
+        <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab7" id="tab7-link" href="#">Transactions</a></li>
       </ul>
     </li>
   </ul>
@@ -128,7 +128,18 @@
       </div>
       <div id="messages_received">
       </div>
+    </div>
 
+    <div id="tab5" class="tab-pane fade">
+      <h3>Syncing</h3>
+    </div>
+
+    <div id="tab6" class="tab-pane fade">
+      <h3>GRANDPA</h3>
+    </div>
+
+    <div id="tab7" class="tab-pane fade">
+      <h3>Transactions</h3>
     </div>
   </div>
 </div>
