Visualize connectivity information for syncing

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,14 @@
 
     <div id="tab5" class="tab-pane fade">
       <h3>Syncing</h3>
+      <hr>
+      <h4>Connectivity, total and unique events</h4>
+      <div class="alert alert-info" role="alert" id="sync_connectivity_info" style="display: none">
+        Did not read any connectivity events.
+      </div>
+      <div id="sync_connectivity">
+      </div>
+
     </div>
 
     <div id="tab6" class="tab-pane fade">
@@ -149,5 +157,6 @@
 <script src="http://localhost:8000/utils.js"></script>
 <script src="http://localhost:8000/general.js"></script>
 <script src="http://localhost:8000/network.js"></script>
+<script src="http://localhost:8000/sync.js"></script>
 </body>
 </html>
