Visualize request/responses for the syncing protocol

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,12 @@
       </div>
       <div id="block_announcements"></div>
 
-
+      <hr>
+      <h4>Block requests/responses over time</h4>
+      <div class="alert alert-info" role="alert" id="block_request_response_time_info" style="display: none">
+        Did not read any block request/response events.
+      </div>
+      <div id="block_request_response_time"></div>
     </div>
 
     <div id="tab6" class="tab-pane fade">
