--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
       <hr>
       <h4>Substream open results</h4>
-      <div class="alert alert-info" role="alert" id="connectivity_info" style="display: none">
+      <div class="alert alert-info" role="alert" id="substream_info" style="display: none">
         Did not read substream events.
       </div>
       <div id="substream_open_results"></div>
@@ -86,8 +86,8 @@
 
     <div id="tab4" class="tab-pane fade">
       <h3>Data usage</h3>
-      <span class="badge text-bg-warning">High message usage</span>
-      <span class="badge text-bg-warning">High byte usage</span>
+      <span class="badge text-bg-warning" style="display: none">High message usage</span>
+      <span class="badge text-bg-warning" style="display: none">High byte usage</span>
 
       <hr>
       <h4>Bytes sent</h4>
