Split network files more logically

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,8 @@
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="http://localhost:8000/utils.js"></script>
 <script src="http://localhost:8000/general.js"></script>
-<script src="http://localhost:8000/network.js"></script>
+<script src="http://localhost:8000/connectivity.js"></script>
+<script src="http://localhost:8000/data_usage.js"></script>
 <script src="http://localhost:8000/sync.js"></script>
 </body>
 </html>
