--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab4" id="tab4-link">Data usage</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab5" id="tab5-link">Syncing</a></li>
-        <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab6" id="tab6-link" href="#">GRANDPA</a></li>
+        <li><a class="dropdown-item" data-bs-toggle="tab" href="#tab6" id="tab6-link">GRANDPA</a></li>
       </ul>
     </li>
   </ul>
@@ -165,6 +165,21 @@
     </div>
     <div id="tab6" class="tab-pane fade">
       <h3>GRANDPA</h3>
+      <hr>
+      <h4>Messages sent/received</h4>
+      <div class="alert alert-info" role="alert" id="grandpa_messages_sent_received_info" style="display: none">
+        Did not read send/receive events.
+      </div>
+      <div id="grandpa_messages_sent_received">
+      </div>
+
+      <hr>
+      <h4>Bytes sent/received</h4>
+      <div class="alert alert-info" role="alert" id="grandpa_bytes_sent_received_info" style="display: none">
+        Did not read send/receive events.
+      </div>
+      <div id="grandpa_bytes_sent_received"><br>
+      </div>
     </div>
   </div>
 </div>
@@ -176,5 +191,6 @@
 <script src="http://localhost:8000/connectivity.js"></script>
 <script src="http://localhost:8000/data_usage.js"></script>
 <script src="http://localhost:8000/sync.js"></script>
+<script src="http://localhost:8000/grandpa.js"></script>
 </body>
 </html>
