--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
         Connecting to server...
       </button>
       <button type="button" class="btn btn-danger" id="delete_files" style="display: none">Remove files</button>
+      <button type="button" class="btn btn-primary" id="select_file"  style="display: none">Select log file</button>
     </div>
 
     <div id="tab2" class="tab-pane fade">
@@ -199,6 +200,7 @@
 <script src="http://localhost:8000/data_usage.js"></script>
 <script src="http://localhost:8000/sync.js"></script>
 <script src="http://localhost:8000/grandpa.js"></script>
+<script src="http://localhost:8000/resumable.js"></script>
 <script src="http://localhost:8000/upload.js"></script>
 </body>
 </html>
