Keep track of request successes/failures

--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,13 @@
       <div id="block_request_response_time"></div>
 
       <hr>
+      <h4>Request success/failure</h4>
+      <div class="alert alert-info" role="alert" id="sync_request_success_failure_info" style="display: none">
+        Did not read block request success/failure events.
+      </div>
+      <div id="sync_request_success_failure"></div>
+
+      <hr>
       <h4>Messages sent/received</h4>
       <div class="alert alert-info" role="alert" id="sync_messages_sent_received_info" style="display: none">
         Did not read send/receive events.
